update supported Java versions 19 to 25